<?php

declare(strict_types=1);

namespace PAPP\Exceptions;

use Exception;

class DomainException extends Exception {}
