<?php

declare(strict_types=1);

namespace PAPP\Exceptions;

class InvalidStateTransitionException extends DomainException {}
